@@ -186,13 +186,6 @@
         </repository>
     </repositories>
 
-    <distributionManagement>
-        <repository>
-            <id>welian-nexus</id>
-            <url>http://maven.welian.com/repository/maven-releases/</url>
-        </repository>
-    </distributionManagement>
-
     <build>
         <plugins>
             <plugin>
@@ -216,9 +209,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.20.1</version>
-                <configuration>
-                    <argLine>--add-modules=jdk.incubator.httpclient</argLine>
-                </configuration>
             </plugin>
             <!--			mvn mybatis-generator:generate-->
             <plugin>
